--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
 }
 android {
     useLibrary('org.apache.http.legacy')
